@@ -1,2 +1,3 @@
 DIST thinking-sphinx-2.0.14.gem 157184 SHA256 0109c4e081e5cde60c148875585358d21c1144c1d4a1fc05f39450273e27f94f SHA512 5325763f0dd8709a5a707a0369c8426a19bb93c807bffa7dc9308b9584ec891509bd1afa754af53a84243f7527071b2b0c2fe7d85cdf3b1b48ef64c0d83d0d6b WHIRLPOOL d90a76faedc8d8d7ea7d7ca7c4dc5be5d6c42ebd2e79a642bc64e386a37e9f9c7d74d12eef208e3834173dda3ad7d46af05fee066b59d0b4a8eaf8b8118da5d3
 DIST thinking-sphinx-3.0.6.gem 94720 SHA256 1b3ebead66c711802c91c8c70195207ae13e896344e3ae1c850f4df37c846224 SHA512 914b7cd3d4a4c962a60a4b53985cffc082779f85aa9784131b31a65b01f3e92ab961ad435f8eb059820c66363ef1af436782c1a4fdf09a9f8411154daf634f66 WHIRLPOOL e81773d033512b25ad301bbff9ed79460e1c2a9546a9a072c8344ed7cf3f767afaf2ab6d5ef22478444055f5568b1e2ad698950840e3b4da46a55c5b065c6dae
+DIST thinking-sphinx-3.1.0.gem 97280 SHA256 929d9f126a5e02ce41ee470fc9d265c50b542555ec9813173fc8f430f89e9edf SHA512 1e7f9acc23fec6e46aad5dff84fccc3bc3caa53078c4a1b424d5c9ecc5f8c31d8b1c71e5722c31e480b3a29357187c91befcb59d43fbf5683f0bfa30e6ff2c11 WHIRLPOOL 0676002f0d2b96d083142c8065b58101978952f6d6d190cc267efafdabea7ae395d392bfffcc3200307adf34bcd2149c9246a32ad9725b9b06b754d10ef79ea9
