@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*thinking-sphinx-3.1.0 (07 Feb 2014)
+
+  07 Feb 2014; Hans de Graaff <graaff@gentoo.org>
+  +thinking-sphinx-3.1.0.ebuild:
+  Version bump.
+
   07 Feb 2014; Hans de Graaff <graaff@gentoo.org>
   -thinking-sphinx-2.0.11.ebuild, -thinking-sphinx-2.0.13.ebuild,
   -thinking-sphinx-3.0.4.ebuild:
